src/objects/MSTRSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings list that stores field maps for utility entities.</description>
    <fields>
        <fullName>AutoScheduleCompassUpdater__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should the Compass updater batch class reschedule itself upon completion?</description>
        <inlineHelpText>Should the Compass updater batch class reschedule itself upon completion?</inlineHelpText>
        <label>Auto Schedule Compass Updater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoScheduleScopusUpdater__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the Scopus updater batch class reschedule itself upon completion?</description>
        <inlineHelpText>Should the Scopus updater batch class reschedule itself upon completion?</inlineHelpText>
        <label>Auto Schedule Scopus Updater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompassAuthToken__c</fullName>
        <description>Authentication token for COMPASS integration</description>
        <label>Compass Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompassEndPoint__c</fullName>
        <description>End point for COMPASS integration</description>
        <label>Compass End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompassUpdaterSchedule__c</fullName>
        <description>The apex schedule expression for Compass updater batch.</description>
        <inlineHelpText>The apex schedule expression for Compass updater batch.</inlineHelpText>
        <label>Compass Updater Schedule</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompassUpdaterScope__c</fullName>
        <description>The batch scope for Compass updater batch.</description>
        <inlineHelpText>The batch scope for Compass updater batch.</inlineHelpText>
        <label>Compass Updater Scope</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExemptDataUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an indicator to exempt data user from all validation and/or trigger logic.</description>
        <inlineHelpText>This is an indicator to exempt data user from all validation and/or trigger logic.</inlineHelpText>
        <label>Exempt Data User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExemptIntegrationUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the integration user will be exempted from validation and/or trigger logic.</description>
        <inlineHelpText>If checked, the integration user will be exempted from validation and/or trigger logic.</inlineHelpText>
        <label>Exempt Integration User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExemptUser__c</fullName>
        <description>This is an indicator to exempt specified user(s) from all validation and/or trigger logic.</description>
        <inlineHelpText>This is an indicator to exempt specified user(s) from all validation and/or trigger logic.</inlineHelpText>
        <label>Exempt User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextQueueObject__c</fullName>
        <description>Identifies next object that needs to be processed. DO NOT CHANGE THIS MANUALLY.</description>
        <label>NextQueueObject</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_End_Point__c</fullName>
        <description>Quote system URL</description>
        <label>Quote End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestQueueMonitorInterval__c</fullName>
        <description>Interval at which to reschedule batch classes</description>
        <inlineHelpText>Interval at which to reschedule batch classes</inlineHelpText>
        <label>Request Queue Monitor Interval</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Probability__c</fullName>
        <label>Required Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ScopusAuthToken__c</fullName>
        <description>Authentication token for SCOPUS integration</description>
        <label>Scopus Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopusEndPoint__c</fullName>
        <description>End point for SCOPUS integration</description>
        <label>Scopus End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopusUpdaterSchedule__c</fullName>
        <description>The apex schedule expression for Scopus updater batch.</description>
        <inlineHelpText>The apex schedule expression for Scopus updater batch.</inlineHelpText>
        <label>Scopus Updater Schedule</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopusUpdaterScope__c</fullName>
        <description>The batch scope for Scopus updater batch.</description>
        <inlineHelpText>The batch scope for Scopus updater batch.</inlineHelpText>
        <label>Scopus Updater Scope</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MSTR Settings</label>
</CustomObject>